--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: 'Oswald', sans-serif;
 }
 
 html,body {
@@ -42,6 +43,7 @@ header nav.desktop ul li{
 	float: left;
 	font-size: 23px;
 	padding: 0 30px;
+	font-style: italic;
 }
 
 header nav.desktop a {
@@ -49,16 +51,60 @@ header nav.desktop a {
 	text-decoration: none;
 }
 
-section.banner {
+section.banner{
+	overflow:hidden;
 	width: 100%;
-	height: 100vw;
-	min-height: 600px;
-	max-height: 800px;
-	background: black;
+	height: 650px;
+	background-color: black;
 	background-image: url('../imagens/bg.jpg');
 	background-size: contain;
 	background-position: right bottom;
 	background-repeat: no-repeat;
+}
+
+.text-banner{
+	padding:70px;
+}
+
+.text-banner-single{
+	width: 314px;
+	font-style: italic;
+	margin-top:30px;
+	height: 70px;
+	line-height: 70px;
+	padding-left: 50px;
+	text-transform: uppercase;
+	color: white;
+	font-size: 23px;
+	background-image: url('../imagens/box-text.png');
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+}
+
+.text-banner .text-banner-single:nth-of-type(2){
+	width: 200px;
+	height: 70px;
+	line-height: 70px;
+	position: relative;
+	left: -10px;
+}
+
+.text-banner .text-banner-single:nth-of-type(3){
+	width: 170px;
+	height: 70px;
+	line-height: 70px;
+	position: relative;
+	left: -20px;
+}
+
+.text-banner .text-banner-single:nth-of-type(4){
+	width: 320px;
+	font-size: 21px;
+	color: black;
+	position: relative;
+	left: -30px;
+	line-height: 70px;
+	background-image: url('../imagens/box-white-text.png');
 }
 
 @media screen and (max-width: 768px) {
@@ -68,4 +114,25 @@ section.banner {
 		min-height: 0;
 		max-height: 800px;
 	}
+
+	nav.desktop
+	{
+		display: none;
+	}
+}
+
+@media screen and (max-width: 580px){
+.text-banner{
+	padding:30px;
+}
+
+.text-banner-single{
+	width: 240px;
+	font-size: 18px;
+}
+
+.text-banner .text-banner-single:nth-of-type(4){
+	width: 270px;
+}
+
 }
