--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,40 @@ header nav.desktop {
 	float: right;
 	position: relative;
 	top: 40px;
+}
 
+nav.mobile{
+	margin-top:40px;
+	float: right;
+	width: 32px;
+	height: 32px;
+	background-size: 100% 100%;
+	cursor: pointer;
+	background-image: url('../imagens/icon_menu.png');
+	display: none;
+}
+
+nav.mobile ul{
+	display: none;
+	width: 100%;
+	left: 0;
+	top: 95px;
+	border-bottom:4px solid #EB2D2D;
+	z-index: 999;
+	position: absolute;
+	text-align: center;
+	background-color: white;
+}
+
+nav.mobile li{
+	font-size: 23px;
+	padding:20px 0px;
+	font-style: italic;
+}
+
+nav.mobile li a{
+	color: black;
+	text-decoration: none;
 }
 
 header nav.desktop ul {
@@ -46,7 +79,7 @@ header nav.desktop ul li{
 	font-style: italic;
 }
 
-header nav.desktop a {
+header nav.desktop a{
 	color: black;
 	text-decoration: none;
 }
@@ -79,6 +112,7 @@ section.banner{
 	background-image: url('../imagens/box-text.png');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
+	text-decoration: none;
 }
 
 .text-banner .text-banner-single:nth-of-type(2){
@@ -107,6 +141,37 @@ section.banner{
 	background-image: url('../imagens/box-white-text.png');
 }
 
+section.veiculos-destaque{
+	padding:90px 2%;
+}
+
+.line-titulo{
+	max-width: 800px;
+	margin:0 auto;
+	position: relative;
+	text-align: center;
+}
+
+.ln1{
+	position: absolute;
+	height: 2px;
+	width: 100%;
+	top:20px;
+	background:black;
+}
+
+section.veiculos-destaque h2{
+	position: relative;
+	background: white;
+	display: inline-block;
+	text-align: center;
+	font-size: 27px;
+	padding:0 20px;
+	font-style: italic;
+	text-transform: uppercase;
+}
+
+
 @media screen and (max-width: 768px) {
 	
 	section.banner{
@@ -118,6 +183,10 @@ section.banner{
 	nav.desktop
 	{
 		display: none;
+	}
+
+	nav.mobile{
+		display: block;
 	}
 }
 
