--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,6 @@ section.banner{
 	background-image: url('../imagens/box-text.png');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
-	text-decoration: none;
 }
 
 .text-banner .text-banner-single:nth-of-type(2){
@@ -151,7 +150,9 @@ section.veiculos-destaque .container{
 	padding:40px 0;
 }
 
+
 .line-titulo{
+	/*Trocamos por 1400 para seguir com o mesmo tamanho do nosso contexto padrão da classe container!*/
 	max-width: 1400px;
 	margin:0 auto;
 	position: relative;
@@ -205,24 +206,156 @@ section.veiculos-destaque .line-titulo h2{
 	font-style: italic;
 }
 
-.vitrine-destaque a{
-	margin-left: 8px;
-	color: white;
-	font-size: 16px;
-	font-style: italic;
-	width: 150px;
-	margin-top:10px;
+
+
+.btn1{
 	text-align: center;
 	display: block;
 	line-height: 40px;
 	background-color:#EB2D2D;
 	text-decoration: none;
 	border-bottom: 5px solid #B21E1E;
+	color: white;
+	font-size: 16px;
+	font-style: italic;
+	width: 150px;
+}
+
+.vitrine-destaque a{
+	margin-left: 8px;
+	margin-top:10px;
+
 }
 
 
+.servicos-descricao{
+	display: flex;
+}
+
+.half1{
+	width: 50%;
+	text-align: right;
+	padding:90px 0;
+	background: #242424;
+	color: white;
+}
+
+.half1-wraper{
+	padding-right: 20%;
+	text-align: left;
+	display: inline-block;
+}
+
+.half1-wraper h2{
+	font-weight: normal;
+	font-style: italic;
+	font-size: 32px;
+}
+
+.half1-wraper ul{
+	display: inline-block;
+	margin-top:20px;
+}
+
+.half1-wraper li{
+	margin-left: 15px;
+}
+
+.half1-wraper a{
+	margin-left: 40px;
+	display: inline-block;
+	vertical-align: bottom;
+}
+
+.half2{
+	width: 50%;
+	padding:90px 100px;
+	background:#EB2D2D;
+	color: white;
+}
+
+.half2 h2{
+	font-weight: normal;
+	font-style: italic;
+	font-size: 32px;
+}
+
+.half2 .depoimento-single{
+	margin-top:19px;
+}
+
+.depoimento-single p{
+	font-size: 22px;
+}
+
+.navigation{
+	float: left;
+	width: 100%;
+	max-width: 700px;
+	margin-top:30px;
+}
+
+.arrows{
+	float: left;
+}
+
+.navigation img{
+	cursor: pointer;
+	margin:0 20px;
+}
+
+.nome-depoimento{
+	float: right;
+	color: #252525;
+	font-size: 23px;
+}
+
+@media screen and (max-width: 1100px){
+
+	.half1{
+		text-align: center;
+	}
+
+	.half1-wraper{
+		text-align: left;
+		padding-right: 0;
+	}
+
+	.half1-wraper a{
+		display: block;
+		margin-left: 0;
+		margin-top:15px;
+	}
+}
+
+@media screen and (max-width: 900px){
+
+
+	.nome-depoimento{
+	float: left;
+	width: 100%;
+	margin:20px 20px;
+	}
+}
+
 @media screen and (max-width: 768px) {
 	
+	.nome-depoimento{
+	float: right;
+	width: auto;
+	margin:0px 0px;
+	}
+
+	section.servicos-descricao{
+		flex-direction: column;
+	}
+
+
+	.half1,.half2{
+		padding:80px 4%;
+		width: 100%;
+	}
+
 	section.banner{
 		background-size: cover;
 		background-position: 100px center;
