--- a/css/style.css
+++ b/css/style.css
@@ -311,12 +311,12 @@ section.veiculos-destaque .container{
 }
 
 section.contato{
-	padding:80px 2%;
+	padding:80px 2% 0 2%;
 }
 
 section.contato form{
 	max-width: 600px;
-	margin:50px auto;
+	margin:30px auto;
 }
 
 section.contato .input-wraper{
@@ -328,15 +328,17 @@ section.contato .input-wraper{
 section.contato input[type=text]{
 	width: 100%;
 	border: 1px solid #ccc;
-	height: 40px;
+	height: 60px;
+	font-size: 16px;
 	line-height: 40px;
 	padding-left: 15px;
 }
 
 section.contato textarea{
+	font-size: 16px;
 	width: 100%;
 	border:1px solid #ccc;
-	height: 120px;
+	height: 140px;
 	padding:8px;
 	resize: none;
 }
@@ -362,6 +364,7 @@ section.contato input[type=submit]{
 }
 
 footer{
+	margin-top: 20px;
 	padding:40px 2%;
 	background: #252525;
 }
@@ -534,21 +537,19 @@ section.venda{
 	margin-top:20px;
 }
 
-.vitrine-venda .vitrine-destaque{
-	margin-top:20px;
-}
 
 section.venda-single{
-	padding:0 2%;
+	padding:80px 2% 0 2%;
 }
 
 section.venda-single .container{
-	padding:40px 0;
-	max-width: 1000px;
+	padding:40px 0 0 0;
+	text-align: center;
+	max-width: 1280px;
 }
 
 .info-veiculo{
-	float: left;
+	display: inline-block;
 	width: 60%;
 }
 
@@ -556,44 +557,145 @@ section.venda-single .container{
 	width: 100%;
 	padding-top:70%;
 	background-position: center;
-	background-size: contain;
+	background-size: cover;
 	background-repeat: no-repeat;
 }
 
 
 .descricao-veiculo{
-	float: left;
-	width: 40%;
-	padding:20px;
+	vertical-align: top;
+	display: inline-block;
+	padding:60px 20px;
+	text-align: left;
 }
 
 .descricao-veiculo p{
+	font-size: 17px;
 	margin-top:25px;
-	max-width: 360px;
+	max-width: 200px;
 }
 
 .descricao-veiculo a{
 	margin-top:25px;
 }
 
-.nav-galeria{
+.nav-galeria-parent {
 	width: 100%;
-	padding:15px;
+	padding: 36px;
+	position: relative;
+}
+
+.arrow-left-nav{
+	position: absolute;
+	left: 8px;
+	top: 50%;
+	transform: translateY(-15%);
+	cursor: pointer;
+	background-image: url('../imagens/arrow-left.png');
+	background-size: 100% 100%;
+	width: 22px;
+	height: 22px;
+}
+
+.arrow-right-nav{
+	position: absolute;
+	right: 8px;
+	top: 50%;
+	transform: translateY(-15%);
+	cursor: pointer;
+	background-image: url('../imagens/arrow-right.png');
+	background-size: 100% 100%;
+	width: 22px;
+	height: 22px;
+}
+
+.info-bread{
+	padding: 20px 0;
+	text-align: left;
+}
+
+.info-bread a{
+	text-decoration: none;
+	color: black;
+}
+
+.info-bread a:last-child{
+	color: red;
+}
+
+.info-bread span{
+	padding: 0 30px;
+}
+
+.nav-galeria{
 	overflow: hidden;
-	margin-top:15px;
+	width: 100%;
 }
 
 .nav-galeria-wraper{
 	width: 200%;
 }
 
-.mini-img{
+.mini-img-wraper{
 	float: left;
-	border:7px solid white;
-	background-position: center;
-	background-size: cover;
-	padding-top:calc(33.3% * (100 / 200) * 0.6);
+	padding: 9px;
 	width:calc(33.3% * (100 / 200));
+}
+
+.mini-img{
+	cursor: pointer;
+	width: 100%;
+	height: 70%;
+	background-position: center;
+}
+
+section.sobre{
+	min-height: 90%;
+	padding:60px 2% 20px 2%;
+}
+
+section.sobre .container{
+	max-width: 840px;
+	margin-top: 30px;
+}
+
+section.sobre .img-destaque-sobre{
+	width: 100%;
+	padding-top: 60%;
+	background-color: rgb(220, 220, 220);
+}
+
+section.sobre .descricao-autor{
+	margin-top: 20px;
+	text-align: left;
+}
+
+.descricao-autor h2{
+	font-size: 24px;
+}
+
+.descricao-autor p{
+	line-height: 28px;
+	font-size: 16px;
+	margin-top: 10px;
+}
+
+.descricao-autor2 {
+	margin-top: 40px;
+}
+
+.img-small {
+	width: 30%;
+	padding-top: 30%;
+	float: left;
+	background-color: rgb(220, 220, 220);
+}
+
+.descricao-autor2 p{
+	float: left;
+	width: 70%;
+	line-height: 28px;
+	padding: 15px;
 }
 
 @media screen and (max-width: 1100px){
@@ -691,6 +793,23 @@ section.venda-single .container{
 		text-align: center;
 		width: 100%;
 	}
+
+	.info-veiculo{
+		width: 100%;
+	}
+
+	.descricao-veiculo{
+		padding: 20px 0;
+		text-align: center;
+	}
+
+	.descricao-veiculo a {
+		display: inline-block;
+	}
+
+	.descricao-veiculo p{
+		max-width: none;
+	}
 }
 
 @media screen and (max-width: 580px){
@@ -726,6 +845,16 @@ section.veiculos-destaque .container{
 
 .vitrine-destaque a{
 	display: inline-block;
+}
+
+.img-small {
+	width: 100%;
+	padding-top: 100%;
+}
+
+.descricao-autor2 p{
+	width: 100%;
+	padding: 20px 0;
 }
 
 }
